# subgraph-template-strawberry-fastapi

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: check-schema.yml  publish-schema.yml  test.yml
api/: schema.py
tests/api/: test_query.py
